jagger Changelog
================

x xxx xxx xx 2007 Release 1.1
- Added unit tests

=============================================================================
* Fri Jul 27 2007 Release 1.0
- First official release, containing the text mode JMX console

=============================================================================
