@@ -18,3 +18,6 @@ jagger.threshold.request.errors = 5.0
 # Make our own JMX agent available? (used for testing)
 jmx.remote.port=42666
 
+# Debugging mode?
+jagger.debug=true
+
