@@ -3,6 +3,7 @@ jagger Changelog
 
 x xxx xxx xx 2007 Release 1.1
 - Added unit tests
+- Made Tomcat and JSW optional (navel-gazing now possible)
 
 =============================================================================
 * Fri Jul 27 2007 Release 1.0
